--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -2,10 +2,19 @@
 #    uv pip compile pyproject.toml --extra dev -o requirements.lock.txt
 annotated-types==0.7.0
     # via pydantic
+anyio==4.10.0
+    # via httpx
 black==24.10.0
     # via archi3d (pyproject.toml)
 build==1.3.0
     # via pip-tools
+certifi==2025.8.3
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
+charset-normalizer==3.4.3
+    # via requests
 click==8.2.1
     # via
     #   black
@@ -17,8 +26,23 @@ colorama==0.4.6
     #   click
     #   pytest
     #   tqdm
+fal-client==0.7.0
+    # via archi3d (pyproject.toml)
 filelock==3.18.0
     # via archi3d (pyproject.toml)
+h11==0.16.0
+    # via httpcore
+httpcore==1.0.9
+    # via httpx
+httpx==0.28.1
+    # via fal-client
+httpx-sse==0.4.1
+    # via fal-client
+idna==3.10
+    # via
+    #   anyio
+    #   httpx
+    #   requests
 iniconfig==2.1.0
     # via pytest
 markdown-it-py==4.0.0
@@ -79,6 +103,8 @@ pytz==2025.2
     # via pandas
 pyyaml==6.0.2
     # via archi3d (pyproject.toml)
+requests==2.32.4
+    # via archi3d (pyproject.toml)
 rich==13.9.4
     # via
     #   archi3d (pyproject.toml)
@@ -91,12 +117,15 @@ shellingham==1.5.4
     # via typer
 six==1.17.0
     # via python-dateutil
+sniffio==1.3.1
+    # via anyio
 tqdm==4.67.1
     # via archi3d (pyproject.toml)
 typer==0.16.0
     # via archi3d (pyproject.toml)
 typing-extensions==4.14.1
     # via
+    #   anyio
     #   mypy
     #   pydantic
     #   pydantic-core
@@ -106,5 +135,7 @@ typing-inspection==0.4.1
     # via pydantic
 tzdata==2025.2
     # via pandas
+urllib3==2.5.0
+    # via requests
 wheel==0.45.1
     # via pip-tools
