--- a/src/archi3d/config/adapters.yaml
+++ b/src/archi3d/config/adapters.yaml
@@ -47,4 +47,10 @@ adapters:
     price_source: "fal.ai price sheet — 2025-08-18"
     defaults:
       texture_size: 2048  # keep other parameters at provider defaults
-
+  tripo3d_v2p5_single:
+    endpoint: "tripo3d/tripo/v2.5/image-to-3d"  # per API docs
+    unit_price_usd: 0.40
+    price_source: "fal.ai price sheet — 2025-08-18"
+    defaults:
+      pbr: true
+      texture: "HD"  # HD textures requested; other params left to provider defaults
