Refactor project structure and documentation
- Updated .gitignore to exclude AI agent files.
- Added settings configuration for Claude in .claude/settings.local.json.
- Created CLAUDE.md to provide comprehensive project guidance and development commands.
- Created GEMINI.md to offer similar guidance for Gemini, mirroring CLAUDE.md structure.

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,10 @@ venv/
 env/
 
 # AI Agents
-.claude/
-claude.md
-gemini.md
-agents.md
+#.claude/
+#claude.md
+#gemini.md
+#agents.md
 
 # Python bytecode and cache
 __pycache__/
