fix: workspace path now assigne through environment variable, .env file and config.yaml

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-# Per-user absolute path to the Testing workspace (overrides ~/.archi3d/config.yaml)
-ARCHI3D_WORKSPACE="C:\\Users\\matti\Politecnico di Bari(1)\\B4V - Archiproducts - General\\Testing"
+# Archi3D Configuration
+# Copy this file to .env and update with your settings.
+# The .env file is gitignored and will not be committed.
 
-# Optional: force worker identity (defaults to OS user)
-# ARCHI3D_WORKER_ID=matti
+# REQUIRED: Absolute path to the workspace directory
+# Use forward slashes (/) even on Windows for compatibility
+ARCHI3D_WORKSPACE="C:/Users/yourname/path/to/Testing"
+
+# Optional: force worker identity (defaults to OS username)
+# ARCHI3D_WORKER_ID=yourname
